@@ -3,6 +3,9 @@ v2.6.3.2 - Bug fixed anaglyph for different data windows and display windows.
 	   data windows.
 	 - Bug fixed data window in mipmap images.  Now each mipmap shows the
 	   proper data window.
+	 - Removed old GL drawing routines for gfx cards without textures
+	   which were no longer working properly.
+	 - Updated color and pixel info updates on seek.
 v2.6.3.1 - Fixed selection in all cases for display and data windows.
 	 - Added missing ICC_PROFILES environment variable to search for
 	   ICC/ICM color profiles.
